--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,5 +1,5 @@
 .form-background{
-    background:rgba(200, 200, 2000, 0.3);
+    //background:rgba(200, 200, 2000, 0.3);
     border-radius: 25px;
 }
 
@@ -13,4 +13,13 @@
 
 .btn-form{
     width: 100%;
+}
+
+.main-input{
+    height: 45px;
+}
+
+
+.main-submit{
+    height: 45px;
 }
