--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,7 +12,9 @@
 // Layout
 @import 'layout/header';
 @import 'layout/main';
+@import 'layout/completeform';
 @import 'layout/footer';
+
 // // Components
 @import 'components/buttons';
 @import 'components/cards';
