--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -21,5 +21,12 @@
 
 
 .main-submit{
-    height: 45px;
+    height: auto;
 }
+
+@media only screen and (max-width: 700px) {
+    .main-submit{
+        min-height: 45px;
+    }
+  }
+
