--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,14 @@ html {
     bottom: 0px;
   }
 }
+.about_text {
+  color: white;
+}
+
+.no-margins {
+  padding: 0px !important;
+}
+
 .form-background {
   border-radius: 25px;
 }
@@ -40,7 +48,7 @@ html {
   height: auto;
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (max-width: 700px) {
   .main-submit {
     min-height: 45px;
   }
