--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,6 +13,7 @@
 @import 'layout/header';
 @import 'layout/main';
 @import 'layout/completeform';
+@import 'layout/about';
 @import 'layout/footer';
 
 // // Components
